# ChangeLog for app-i18n/anthy-ss
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy-ss/ChangeLog,v 1.44 2004/08/19 08:17:36 hattya Exp $

*anthy-ss-5613 (19 Aug 2004)

  19 Aug 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5613.ebuild:
  version bump.

  10 Aug 2004; Akinori Hattori <hattya@gentoo.org> -anthy-ss-5516.ebuild,
  -anthy-ss-5523.ebuild:
  cleaned out old ebuilds.

*anthy-ss-5608 (10 Aug 2004)

  10 Aug 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5608.ebuild:
  version bump.

  06 Aug 2004; Akinori Hattori <hattya@gentoo.org> -anthy-ss-5406.ebuild,
  -anthy-ss-5414.ebuild:
  cleaned out old ebuilds.

  06 Aug 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5605.ebuild:
  version bump.

*anthy-ss-5524 (25 Jul 2004)

  25 Jul 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5524.ebuild:
  version bump.

*anthy-ss-5516 (25 Jul 2004)

  25 Jul 2004; Akinori Hattori <hattya@gentoo.org> anthy-ss-5406.ebuild,
  anthy-ss-5414.ebuild, anthy-ss-5516.ebuild:
  fixed typo. and ChangeLog fix.

*anthy-ss-5523 (25 Jul 2004)

  25 Jul 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5523.ebuild:
  version bump.

  18 Jul 2004; Akinori Hattori <hattya@gentoo.org> -anthy-ss-5326.ebuild,
  -anthy-ss-5330.ebuild:
  cleaned out old ebuilds.

  18 Jul 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5516.ebuild:
  version bump.

*anthy-ss-5414 (17 Jun 2004)

  17 Jun 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5414.ebuild:
  version bump.

  13 Jun 2004; Akinori Hattori <hattya@gentoo.org> -anthy-ss-5229.ebuild,
  -anthy-ss-5312.ebuild:
  cleaned out old ebuilds.

*anthy-ss-5406 (13 Jun 2004)

  13 Jun 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5406.ebuild:
  version bump.

*anthy-ss-5330 (06 Jun 2004)

  06 Jun 2004; Akinori Hattori <hattya@gentoo.org> anthy-ss-5330.ebuild:
  version bump.

  30 May 2004; Akinori Hattori <hattya@gentoo.org> anthy-ss-5201.ebuild,