@@ -1,11 +1,13 @@
-MD5 45ab716300c8f379746401240ffbb00d ChangeLog 6059
+MD5 02dface132d8149838bb094fec287878 ChangeLog 6180
 MD5 6a4d089f12ccee7c064e9f51d9674058 anthy-ss-5524.ebuild 1516
 MD5 dc6b1a93a1ee456434fca1ace9d3a6a9 anthy-ss-5605.ebuild 1516
 MD5 685ca99e1830c1c18ef9dcd474aeb690 anthy-ss-5608.ebuild 1516
 MD5 9450455211862e1d4be31f74762bc806 anthy-ss-5613.ebuild 1516
+MD5 1b87ce8d9b1c27f4da17078b6090deb4 anthy-ss-5626.ebuild 1516
 MD5 bae17b53f1633ca708e67b8762933954 metadata.xml 616
 MD5 d91fcb424ec63b588900d2d88a8bcee2 files/50anthy-gentoo.el 99
 MD5 b5662c0f7e3322dd5faafd4c93369a41 files/digest-anthy-ss-5524 63
 MD5 9d4cfec06abef726fdb34437483a6cb0 files/digest-anthy-ss-5605 63
 MD5 5d67456010e53e1c3ac13fbb21bc43cd files/digest-anthy-ss-5608 63
 MD5 4f29f88aefb078e637262bb3574ebdde files/digest-anthy-ss-5613 63
+MD5 b138cf04ba4c5ff57d888a4bd92828da files/digest-anthy-ss-5626 63
