@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/anthy-ss
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy-ss/ChangeLog,v 1.44 2004/08/19 08:17:36 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy-ss/ChangeLog,v 1.45 2004/08/28 08:30:15 hattya Exp $
+
+*anthy-ss-5626 (28 Aug 2004)
+
+  28 Aug 2004; Akinori Hattori <hattya@gentoo.org> +anthy-ss-5626.ebuild:
+  version bump.
 
 *anthy-ss-5613 (19 Aug 2004)
 
